# GeneralAgent

./: .env.example  .gitignore  Dockerfile  Dockerfile_base  Dockerfile_base_mirror  LICENSE  README.md  README_CN.md  README_EN.md  README_en.md  a.txt  memory.py  pyproject.toml  requirements.txt  setup.py  start.sh
GeneralAgent/: .env.example  __init__.py  agent.old.py  agent.py  cache.json  cli.py  code.py  code_interpreter.py  code_workspace.py  controller.py  controller.py.bak  interpreter.py  keys.example.py  llamaindex.py  llm.py  memory.py  prompt_en.json  prompts.py  requirements.txt  scratch.py  tools.py  utils.py
docker/: Dockerfile  Dockerfile_base
docs/: README.md  README_CN.md  develop.md
examples/: 0_base_usage.py  10_rag_function.py  11_collection_and_store.py  12_hide_python_code.py  13_image_input.py  14_doubao_llm.py  15_run_check.py  16_test_azure.py  17_qwen.py  18_translate_agent.py  19_temporary_context.py  1_function_call.py  20_load_memory.py  21_market_search.py  2_function_call.py  2_workflow.py  2_write_novel.py  3_ai_search.py  3_ai_search_simple.py  4_multi_agents.py  5_serialize.py  6_disable_python_run.py  7_hide_stream.py  8_multi_model.py  9_knowledge_files.py  act_as_llm.py  add_tools.py  basic.py  business_plan.md  custom_interpter.py  custom_output.py  custom_role_prompt.py  default_agent.py  empty_agent.py  examples.md  interactive_examples.md  interactive_examples.zh.md  load_env.py  medical_record.txt  multi_lines_input.py  (+7 more)
samples/: 1_write_novel.py  2_ai_search.py  write_novel.py
scripts/: README.md  auto_test.sh  publish.sh  publish_pip.sh  test.sh
skills/: __init__.py  application_builder.py  applications.py  build_web.py  download_file.py  llm_inference.py  memory_utils.py  messages_token_count.py  read_file_content.py  replicate_api.py  split_text.py  text_to_speech.py  text_translation.py  token_count.py
test/: .env.example  b.txt  base_setting.py  manual.py  manual_controller.py  multi_lines_input.py  terminal.py  test_agent.py  test_code.py  test_controller.py  test_examples.py  test_interpreter.py  test_interpreter_applescript.py  test_interpreter_async_python.py  test_interpreter_bash.py  test_interpreter_file.py  (+20 more)
(+203 files in other folders)
