[tool.poetry]
name = "GeneralAgent"
version = "0.2.1"
description = "General Agent: From LLM to Agent"
authors = ["Chen Li <lichenarthurdata@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/CosmosShadow/GeneralAgent"
packages = [
    { include = "GeneralAgent" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
requests = "2.31.0"
tinydb = "4.8.0"
openai = "1.3.3"
litellm = "^1.7.5"
jinja2 = "3.1.2"
numpy = "1.24.4"
bs4 = "0.0.1"
playwright = "1.39.0"
retrying = "1.3.4"
pymupdf = "1.23.6"
python-pptx = "0.6.23"
python-docx = "1.1.0"
yfinance = "0.2.31"
beautifulsoup4 = "4.12.2"
python-dotenv = "1.0.0"
uvicorn = "0.24.0.post1"
tiktoken = "0.5.1"
httpx = "0.24.0"
pulsar-client = "3.3.0"
pymongo = "4.6.0"
websocket-client-py3 = "0.15.0"
websockets = "12.0"
pypdf = "3.17.1"
replicate = "0.18.1"
edge-tts = "6.1.9"
pydub = "0.25.1"
chromadb = "0.4.17"
python-multipart = "0.0.6"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pydantic = '2.5.1'


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[[tool.poetry.source]]
name = "PyPI"
priority="primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
GeneralAgent= 'GeneralAgent.cli:main'