[tool.poetry]
name = "GeneralAgent"
version = "0.3.18"
description = "General Agent: From LLM to Agent"
authors = ["Chen Li <lichenarthurdata@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/CosmosShadow/GeneralAgent"
packages = [
    { include = "GeneralAgent" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
tinydb = "^4.8.0"
openai = "^1.3.3"
jinja2 = "^3.1.2"
numpy = "^1.24.4"
tiktoken = "^0.5.1"
llama-index ="^0.10.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[[tool.poetry.source]]
name = "PyPI"
priority="primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
GeneralAgent= 'GeneralAgent.cli:main'